Fully reenabled spotbugs in utility project.
Fixed spotbugs warnings by utlitzin Collection factory methods.